--- a/less/index.less
+++ b/less/index.less
@@ -52,8 +52,125 @@ table {
 * {
     box-sizing: border-box;
 }
-
-html, body {
-    height: 100%;
+.font-color {
+	color: white;
 }
 
+
+html, body {
+	height: 100%;
+	
+}
+.container {
+	margin: 5%;
+	align-items: center;
+
+}
+header {
+	display: flex;
+	height: 5%;
+	width:100%;
+	background-color: royalblue;
+
+	@media (max-width: 500px) {
+		padding: 5%;
+	}
+}
+
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	height: 30px;
+    margin: 2%;
+	a {
+		color: black;
+		text-decoration: none;
+		font-size: 20px;
+
+		@media (max-width: 500px) {
+			.font-color()
+
+		}
+		
+	}
+	a:hover {
+		color: white;
+		@media (max-width: 500px) {
+			color: black;
+
+		}
+	}
+	
+}
+.main-box {
+	background-color: lightgray;
+	padding: 2%;
+	@media (max-width: 500px) {
+		padding: 5%;
+		background-color: black;
+		.font-color()
+		}
+
+}
+h1 {
+	font-size: 40px;
+	@media (max-width: 500px) {
+		font-size: 35px;
+		
+	}
+	
+}
+
+
+.two-box {
+	display: flex;
+	width: 100%;
+	background-color: royalblue;
+	padding: 2%;
+	@media (max-width: 500px) {
+		padding: 2%;
+	}
+	.first {
+		width: 50%;
+		margin: 1%;
+		@media (max-width: 500px) {
+			padding: 1%;
+		}
+	}
+	.second {
+		margin: 1%;
+		@media (max-width: 500px) {
+			padding: 1%;
+		}
+	}
+}
+p {
+	font-size: 20px;
+}
+ul {
+	font-size: 25;
+}
+li {
+	list-style: square;
+}
+.history {
+	background-color: lightgray;
+	padding: 2%;
+
+	@media (max-width: 500px) {
+		padding: 5%;
+		background-color: black;
+		.font-color()
+		}
+}
+table, tr, th, td {
+	height: 50px;
+	vertical-align: bottom;
+	border: solid black;
+	width: 20%;
+	@media (max-width: 500px) {
+		border: solid white;
+	}
+  }
